FINISHING UP GOOGLE DRIVE INTEGRATION

--- a/firebase.json
+++ b/firebase.json
@@ -29,7 +29,25 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Cross-Origin-Opener-Policy",
+            "value": "same-origin-allow-popups"
+          },
+          {
+            "key": "Cross-Origin-Embedder-Policy",
+            "value": "credentialless"
+          }
+        ]
+      }
+    ],
     "rewrites": [
+      { "source": "/api/drive/auth/start", "function": "apiDriveAuthStart" },
+      { "source": "/api/drive/auth/callback", "function": "apiDriveAuthCallback" },
+      { "source": "/api/drive/files", "function": "apiDriveFiles" },
       {
         "source": "**",
         "destination": "/index.html"
